[gd_scene load_steps=13 format=3 uid="uid://drl47ynrkqfap"]

[ext_resource type="Script" uid="uid://c3oxojt0wigo4" path="res://scripts/menu.gd" id="1_yqeox"]
[ext_resource type="Texture2D" uid="uid://byp562cyekmun" path="res://assets/sprites/life_is_herd.png" id="2_g3eks"]
[ext_resource type="Texture2D" uid="uid://bpaqa2l0e5qth" path="res://assets/sprites/ui/button_normal.png" id="3_4ytvr"]
[ext_resource type="Texture2D" uid="uid://2861gcblrnma" path="res://assets/sprites/ui/button_fill.png" id="3_mhnvy"]
[ext_resource type="Texture2D" uid="uid://ppsa8o5qrkxd" path="res://assets/sprites/ui/button_outline.png" id="4_4ytvr"]

[sub_resource type="Animation" id="Animation_v86rl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(56, -66.5)]
}

[sub_resource type="Animation" id="Animation_g3eks"]
resource_name = "bounce"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 3.9666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(56, -154.5), Vector2(56, -144.5), Vector2(56, -134.5), Vector2(56, -144.5), Vector2(56, -154.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_13sgg"]
_data = {
&"RESET": SubResource("Animation_v86rl"),
&"bounce": SubResource("Animation_g3eks")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g3eks"]
content_margin_left = 12.0
content_margin_top = 9.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("3_4ytvr")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v86rl"]
content_margin_left = 12.0
content_margin_top = 9.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("3_mhnvy")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_13sgg"]
content_margin_left = 12.0
content_margin_top = 9.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("3_mhnvy")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i6lef"]
content_margin_left = 12.0
content_margin_top = 9.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("4_4ytvr")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_yqeox")

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 40.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Sprite2D" parent="MarginContainer2"]
modulate = Color(1, 1, 1, 0)
position = Vector2(56, -66.5)
texture = ExtResource("2_g3eks")
offset = Vector2(-56, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer2/Title"]
libraries = {
&"": SubResource("AnimationLibrary_13sgg")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 30

[node name="Menu" type="VBoxContainer" parent="MarginContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.67058825, 0.05490196, 1)
theme_override_colors/font_focus_color = Color(0.6901961, 0, 0.38039216, 1)
theme_override_colors/font_hover_color = Color(0.6901961, 0, 0.38039216, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_g3eks")
theme_override_styles/pressed = SubResource("StyleBoxTexture_v86rl")
theme_override_styles/hover = SubResource("StyleBoxTexture_13sgg")
theme_override_styles/focus = SubResource("StyleBoxTexture_i6lef")
text = "Play"

[node name="Settings" type="Button" parent="MarginContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.67058825, 0.05490196, 1)
theme_override_colors/font_focus_color = Color(0.6901961, 0, 0.38039216, 1)
theme_override_colors/font_hover_color = Color(0.6901961, 0, 0.38039216, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_g3eks")
theme_override_styles/pressed = SubResource("StyleBoxTexture_v86rl")
theme_override_styles/hover = SubResource("StyleBoxTexture_13sgg")
theme_override_styles/focus = SubResource("StyleBoxTexture_i6lef")
text = "Settings"

[node name="Credits" type="Button" parent="MarginContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.67058825, 0.05490196, 1)
theme_override_colors/font_focus_color = Color(0.6901961, 0, 0.38039216, 1)
theme_override_colors/font_hover_color = Color(0.6901961, 0, 0.38039216, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_g3eks")
theme_override_styles/pressed = SubResource("StyleBoxTexture_v86rl")
theme_override_styles/hover = SubResource("StyleBoxTexture_13sgg")
theme_override_styles/focus = SubResource("StyleBoxTexture_i6lef")
text = "Credits"

[connection signal="animation_finished" from="MarginContainer2/Title/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="MarginContainer/Menu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/Credits" to="." method="_on_credits_pressed"]
